[package]
name = "svgd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "net"] }
hyper = { version = "0.14.16", features = ["server", "http1", "http2", "tcp"] }
rusttype = { version = "0.9.2" }
